Fixed documentation typo that confused me
Saw this typo, and wanted to fix it.

--- a/views/docs/programmatically-changes.html
+++ b/views/docs/programmatically-changes.html
@@ -81,8 +81,8 @@
     <td>myTable.setValue([string], [string], [bool]);</td>
 </tr>
 <tr>
-    <td><b>setValueFromCoords:</b> get value from coords<br>@Param integer x<br>@Param integer y<br>@Param string Value - new value for the cell<br>@Param bool force - update readonly columns</td>
-    <td>myTable.getValueFromCoords([integer], [integer], [string], [bool]);</td>
+    <td><b>setValueFromCoords:</b> set value from coords<br>@Param integer x<br>@Param integer y<br>@Param string Value - new value for the cell<br>@Param bool force - update readonly columns</td>
+    <td>myTable.setValueFromCoords([integer], [integer], [string], [bool]);</td>
 </tr>
 <tr>
     <td><b>resetSelection:</b> Reset the table selection<br>@Param boolean executeBlur - execute the blur from the table<br></td>
